@@ -1,6 +1,6 @@
-Date: 2022-12-09
+Date: 2022-12-11
 Package: CHNOSZ
-Version: 1.9.9-52
+Version: 1.9.9-53
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
